grpc-asm/bkup/asm-dr-idletimeout.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grpc-echo-gw
  namespace: asm-gateway
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
    - hosts:
        - '*'
      port:
        name: grpc
        number: 443
        protocol: HTTPS
      tls:
        credentialName: asm-gcpx-org-credential
        mode: SIMPLE
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grpc-echo-vs
  namespace: test
spec:
  gateways:
    - asm-gateway/grpc-echo-gw
  hosts:
    - 'asm.gcpx.org'
  http:
    - name: 'grpc-echo-all'
      route:
        - destination:
            host: grpc-echo.test.svc.cluster.local
            port:
              number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: grpc-echo-dr
  namespace: test
spec:
  host: grpc-echo.test.svc.cluster.local
  trafficPolicy:
    connectionPool:
      http:
        idleTimeout: 3s
    tls:
      mode: DISABLE
