grpc-asm/bkup/asm-vs-retry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grpc-echo-gw
  namespace: asm-gateway
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
    - hosts:
        - '*'
      port:
        name: grpc
        number: 443
        protocol: HTTPS
      tls:
        credentialName: asm-gcpx-org-credential
        mode: SIMPLE
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grpc-echo-vs
  namespace: test
spec:
  gateways:
    - asm-gateway/grpc-echo-gw
  hosts:
    - 'asm.gcpx.org'
  http:
    - name: 'grpc-echo-all'
      route:
        - destination:
            host: grpc-echo.test.svc.cluster.local
            port:
              number: 8080
      timeout: 3s
      retries:
        attempts: 2
        perTryTimeout: 3s
